test/fail/issue-4323.mo
type Main = actor { beep : () -> async () };

// let-like annotation
actor Main : Main = {

}
